Added filterable sales feed

--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>MEAN Starter Kit</title>
-  <meta name="description" content="This is a MEAN Stack starter kit made by Luciano Nooijen">
-  <meta name="keywords" content="mean starter kit">
+  <title>Stager Ticket Visualizer</title>
+  <meta name="description" content="Stager Ticket Visualizer">
+  <meta name="keywords" content="Stager Ticket Visualizer">
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -12,7 +12,7 @@
 </head>
 <body>
   <app-root>
-    <h2 class="text-center">Loading...</h2>
+    <h2 class="text-center mt-5">Loading...</h2>
   </app-root>
 </body>
 </html>
